tailwind no src

--- a/index.html
+++ b/index.html
@@ -6,8 +6,21 @@
   <link href="./output.css" rel="stylesheet">
 </head>
 <body>
+  <header>
+    <img src="./images/logo.png" class="w-16 md:w-32 lg:w-48" alt="logo">
+    <nav>
+
+    </nav>
+  </header>
+  <main>
   <h1 class="text-3xl font-bold underline">
     Bryggeri eventside
   </h1>
+  </main>
+  <footer>
+    <p>
+      © 2021 Bryggeri eventside
+    </p>
+  </footer>
 </body>
 </html>
