--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./output.css" rel="stylesheet">
+  <link href="./css/output.css" rel="stylesheet">
 </head>
 <body>
   <header>
-    <img src="./images/logo.png" class="w-16 md:w-32 lg:w-48" alt="logo">
+    <img src="./images/logo.webp" class="w-16 md:w-32 lg:w-48 block relative logo" alt="logo">
     <nav>
 
     </nav>
