--- a/index.html
+++ b/index.html
@@ -7,20 +7,40 @@
 </head>
 <body>
   <header>
-    <img src="./images/logo.webp" class="w-16 md:w-32 lg:w-48 block relative logo" alt="logo">
+    <img src="./images/logo.webp" class="lg:w-48 md:w-40 w-32 block relative logo" alt="logo">
     <nav>
-
-    </nav>
-  </header>
-  <main>
+      <ul class="flex justify-center">
+        <li>
+          <a href="#">Hjem</a>
+        </li>
+        <li>
+          <a href="#">Events</a>
+        </li>
+        <li>
+          <a href="#">Traktørstedet</a>
+        </li>
+        <li>
+          <a href="#">Historie</a>
+        </li>
+        <li>
+          <a href="#">Galleri</a>
+        </li>
+        <li>
+          <a href="#">Kontakt</a>
+        </li>
+      </li>
+    </ul>
+  </nav>
+</header>
+<main>
   <h1 class="text-3xl font-bold underline">
     Bryggeri eventside
   </h1>
-  </main>
-  <footer>
-    <p>
-      © 2021 Bryggeri eventside
-    </p>
-  </footer>
+</main>
+<footer>
+  <p>
+    © 2021 Bryggeri eventside
+  </p>
+</footer>
 </body>
 </html>
