--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header>
     <img src="./images/logo.webp" class="lg:w-48 md:w-40 w-32 block relative logo" alt="logo">
     <nav>
-      <ul class="flex justify-center">
+      <ul class="flex justify-center flex-wrap">
         <li>
           <a href="#">Hjem</a>
         </li>
