--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
 <main class="mx-auto max-w-4xl">
   <h1 class="text-3xl font-bold my-2 block">Events på Bryggeriet</h1>
   <div class="columns-3 my-8">
-    <img src="/images/dollypartonevent.jpg" alt="Billede af musikerne der spillet til event med Dolly Parton"/>
-    <img src="/images/middagmedmeningevent.jpg" alt=""/>
-    <img src="/images/johnogbjarneevent.png" alt=""/>
+    <img src="./images/dollypartonevent.jpg" alt="Billede af musikerne der spillet til event med Dolly Parton"/>
+    <img src="./images/middagmedmeningevent.jpg" alt=""/>
+    <img src="./images/johnogbjarneevent.png" alt=""/>
   </div>
   <article>
     <h2 class="text-2xl">Fredagsbar med spisning og live Country musik</h2>
     <div class="md:flex">
       <div class="mx-auto md:basis-2/3">
-        <img src="/images/dollypartonevent.jpg" alt="Billede af musikerne der spillet til event med Dolly Parton"/>
+        <img src="./images/dollypartonevent.jpg" alt="Billede af musikerne der spillet til event med Dolly Parton"/>
         <p>
           🎼 Oplev fredagsstemningen fyldt med livemusik og lækker mad! 🎼
           
@@ -84,35 +84,37 @@
           Billetter inkluderer adgang til arrangementet samt vores lækre menu med langtidsstegte Barbecue Ribs og Buffalo Wings. Og som prikken over i'et serveres der forskelligt, velsmagende tilbehør til at fuldende din smagsoplevelse 🍽️🍗.
         </p>
       </div>
-      <aside class="md:basis-1/3 sticky top-0 pl-2">
-      <div id="infobox">
-        <p><b>Lokation:</b><br/>Søvejen 4, 6900 Skjern</p>
-        <p><b>Dato:</b><br/>28-06-2024</p>
-        <p><b>Tidspunkt:</b><br/>18:00 - 1:00</p>
-        <p><b>Pris:</b><br/>240 kr inkl. billetgebyr</p>
-      </div>
-      <div id="menubox">
-        <p><b>Menu:</b>
-          <i>Chicago Buffet</i>
-          Rosa stegt oksefilet.
-          BBQ marineret nakkefilet.
-          Farseret kalkunbryst med soltørrede tomater og feta.
-          Gratinerede flødekartofler med timian.
-          Coleslaw.
-          Salatfad.
-          Små kartofler i bearnaisesauce anrettet i skål.
-          Tomatsalat med salattern og oliven.
-          Dressing og brød.</p>
-        </div>
-          <button id="orderbtn">Køb billet</button>
-      </>
-    </aside>
-  </article>
-</main>
-<footer>
-  <p class="text-center m-2">
-    © 2021 Bryggeri eventside
-  </p>
-</footer>
-</body>
-</html>
+      <aside class="md:basis-1/3">
+        <div class="sticky top-2 pl-2">
+          <div id="infobox">
+            <p><b>Lokation:</b><br/>Søvejen 4, 6900 Skjern</p>
+            <p><b>Dato:</b><br/>28-06-2024</p>
+            <p><b>Tidspunkt:</b><br/>18:00 - 1:00</p>
+            <p><b>Pris:</b><br/>240 kr inkl. billetgebyr</p>
+          </div>
+          <div id="menubox">
+            <p><b>Menu:</b>
+              <i>Chicago Buffet</i>
+              Rosa stegt oksefilet.
+              BBQ marineret nakkefilet.
+              Farseret kalkunbryst med soltørrede tomater og feta.
+              Gratinerede flødekartofler med timian.
+              Coleslaw.
+              Salatfad.
+              Små kartofler i bearnaisesauce anrettet i skål.
+              Tomatsalat med salattern og oliven.
+              Dressing og brød.</p>
+            </div>
+            <button class="p-4 mx-auto bg-green text-xl" id="orderbtn">Køb billet</button>
+          </div>
+        </aside>
+      </article>
+    </main>
+    <footer>
+      <p class="text-center m-2">
+        © 2021 Bryggeri eventside
+      </p>
+    </footer>
+  </body>
+  </html>
+  
