--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
     </ul>
   </nav>
 </header>
-<main class="mx-auto max-w-4xl">
+<div class="leftpics">
+  <img src="./images/skilt.webp" alt="Rækker Mølles skilt ved vejen"/>
+  <img src="./images/vinkel2.webp" alt="Rækker Mølle set udfra, anden vinkel"/>
+</div>
+<main class="center max-w-4xl">
   <h1 class="text-3xl font-bold my-2 block">Events på Bryggeriet</h1>
   <div class="columns-3 my-8">
     <img src="./images/dollypartonevent.jpg" alt="Billede af musikerne der spillet til event med Dolly Parton"/>
@@ -90,7 +94,6 @@
             <p><b>Lokation:</b><br/>Søvejen 4, 6900 Skjern</p>
             <p><b>Dato:</b><br/>28-06-2024</p>
             <p><b>Tidspunkt:</b><br/>18:00 - 1:00</p>
-            <p><b>Pris:</b><br/>240 kr inkl. billetgebyr</p>
           </div>
           <div id="menubox">
             <p><b>Menu:</b>
@@ -105,11 +108,19 @@
               Tomatsalat med salattern og oliven.
               Dressing og brød.</p>
             </div>
-            <button class="p-4 mx-auto bg-green text-xl" id="orderbtn">Køb billet</button>
+            <div id="orderbox">
+              <p class="text-center"><b>Pris:</b> 240 kr inkl. billetgebyr</p>
+              <button class="p-2 center text-xl mt-2" id="orderbtn">Køb billet</button>
+            </div>
           </div>
         </aside>
       </article>
     </main>
+    <div class="rightpics">
+      <img src="./images/raekkermoelle.png" alt="Rækker Mølle set udefra "/>
+      <img src="./images/spisesal.png" alt="Spisesal ved Rækker Mølle"/>
+      <img src="./images/kobber.webp" alt="Kobberkopper"/>
+    </div>
     <footer>
       <p class="text-center m-2">
         © 2021 Bryggeri eventside
