--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
               </div>
               <div class="box-body">
                 <p class="text-center"><b>Pris:</b> 240 kr inkl. billetgebyr</p>
-                <button class="p-2 center text-xl mt-2" id="orderbtn">Køb billet</button>
+                <button class="p-2 center text-white font-semibold text-xl mt-2 bg-green-600 rounded-lg hover:bg-green-500">Køb billet</button>
               </div>
             </div>
           </aside>
